display universe as text

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="app">
-			<button id="greet">🖖</button>
+			<pre id="game-of-life-canvas"></pre>
 		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
