--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,7 @@
 		<title>The Game of Life</title>
 	</head>
 	<body>
-		<div id="app">
-			<pre id="game-of-life-canvas"></pre>
-		</div>
+		<canvas id="game-of-life-canvas"></canvas>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
