--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,11 @@
 	</head>
 	<body>
 		<canvas id="game-of-life-canvas"></canvas>
+		<div class="controls">
+			<button id="play-toggle">▶</button>
+			<button id="randomizer">rand</button>
+			<button id="clear">clear</button>
+		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
