stats display + minor performance optimizations

--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
 			<button id="randomizer">rand</button>
 			<button id="clear">clear</button>
 		</div>
+		<div id="fps"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
