--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 		<canvas id="game-of-life-canvas"></canvas>
 		<div class="controls">
 			<button id="play-toggle">▶</button>
+			<button id="next">↦</button>
 			<button id="randomizer">rand</button>
 			<button id="clear">clear</button>
 		</div>
